FD-185: Firefox header alignment fixed

--- a/src/styles/header-footer.css
+++ b/src/styles/header-footer.css
@@ -87,6 +87,8 @@
 	margin-bottom: auto;
 }
 
+
+
 .farmdoc a{
 	color: #FFFFFF;
 	font-family: Roboto;
@@ -104,6 +106,15 @@
 	height: 40px;
 	margin-left: 28px;
 	margin-right: 14px;
+}
+
+.headerSection {
+	line-height: 40px !important;
+	text-align: center;
+	display: flex;
+	vertical-align: middle;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .farmdoc-analyzer {
